src/parser/snapshots/monkey_language_server__parser__test__fn_expr_unhappy_3_errors.snap
---
source: src/parser/test.rs
description: "fn(x y) {}"
expression: "parser_errors(\"fn(x y) {}\", errors)"
---
fn(x y) {}
     ^ SyntaxError: Expected ',' not found.
