src/parser/snapshots/monkey_language_server__parser__test__fn_expr_unhappy_7.snap
---
source: src/parser/test.rs
description: "fn(x, y, z,) { if (x) { y } else { z  }; 5"
expression: result
---
[
    Function {
        token: Token(Function, "fn", (0,0)->(0,2)),
        params: Ok(
            [
                Ok(
                    Identifier {
                        token: Token(Identifier, "x", (0,3)->(0,4)),
                        name: "x",
                    },
                ),
                Ok(
                    Identifier {
                        token: Token(Identifier, "y", (0,6)->(0,7)),
                        name: "y",
                    },
                ),
                Ok(
                    Identifier {
                        token: Token(Identifier, "z", (0,9)->(0,10)),
                        name: "z",
                    },
                ),
            ],
        ),
        body: Err(
            Err(UnexpectedEof("SyntaxError: Unexpected eof."), (0,41)->(0,42)),
        ),
    },
]

===================================

fn(x, y, z,) { if (x) { y } else { z  }; 5
                                         ^ SyntaxError: Unexpected eof.
