src/parser/snapshots/monkey_language_server__parser__test__fn_expr_unhappy_7_errors.snap
---
source: src/parser/test.rs
description: "fn(x, y, z,) { if (x) { y } else { z  }; 5"
expression: "parser_errors(\"fn(x, y, z,) { if (x) { y } else { z  }; 5\", errors)"
---
fn(x, y, z,) { if (x) { y } else { z  }; 5
                                         ^ SyntaxError: Unexpected eof.
